--- a/index.html
+++ b/index.html
@@ -156,12 +156,12 @@
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 													<header>
-														<h3>Blandit sed adipiscing</h3>
+														<h3>Coffee Street</h3>
 													</header>
 													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
 													<footer>
 														<ul class="actions">
-															<li><a href="#" class="button alt">Find out more</a></li>
+															<li><a href="https://coffee-street-front-end.vercel.app/" class="button alt">See</a></li>
 														</ul>
 													</footer>
 												</section>
@@ -170,12 +170,12 @@
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 													<header>
-														<h3>Etiam nisl consequat</h3>
+														<h3>Videogames</h3>
 													</header>
 													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
 													<footer>
 														<ul class="actions">
-															<li><a href="#" class="button alt">Find out more</a></li>
+															<li><a href="https://videogames-client-ts.vercel.app/" class="button alt">See</a></li>
 														</ul>
 													</footer>
 												</section>
@@ -189,7 +189,7 @@
 													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
 													<footer>
 														<ul class="actions">
-															<li><a href="#" class="button alt">Find out more</a></li>
+															<li><a href="https://todo-app-beta-one.vercel.app/" class="button alt">See</a></li>
 														</ul>
 													</footer>
 												</section>
