--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
 													<header>
-														<h3>Dolore nisl feugiat</h3>
+														<h3>Todo App</h3>
 													</header>
 													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
 													<footer>
