--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
 					<!-- Nav -->
 						<nav id="nav">
-							<ul>
+							<!-- <ul>
 								<li class="current"><a href="index.html">Home</a></li>
-								<li>
-									<a href="#">Dropdown</a>
-									<ul>
+								<li> -->
+									<!-- <a href="#">Dropdown</a> -->
+									<!-- <ul>
 										<li><a href="#">Lorem ipsum dolor</a></li>
 										<li><a href="#">Magna phasellus</a></li>
 										<li><a href="#">Etiam dolore nisl</a></li>
@@ -41,24 +41,24 @@
 											</ul>
 										</li>
 										<li><a href="#">Veroeros feugiat</a></li>
-									</ul>
-								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
+									</ul> -->
+								<!-- </li> -->
+								<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
-							</ul>
+								<li><a href="no-sidebar.html">No Sidebar</a></li> -->
+							<!-- </ul> -->
 						</nav>
 
 					<!-- Banner -->
 						<section id="banner">
 							<header>
 								<h2>My Portfolio</h2>
-								<p>A responsive template by HTML5 UP</p>
+								<p>See my projects ...</p>
 							</header>
 						</section>
 
 					<!-- Intro -->
-						<section id="intro" class="container">
+						<!-- <section id="intro" class="container">
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<section class="first">
@@ -94,7 +94,7 @@
 									<li><a href="#" class="button alt large">Learn More</a></li>
 								</ul>
 							</footer>
-						</section>
+						</section> -->
 
 				</section>
 
@@ -106,59 +106,17 @@
 
 								<!-- Portfolio -->
 									<section>
-										<header class="major">
+										<!-- <header class="major">
 											<h2>My Portfolio</h2>
-										</header>
+										</header> -->
 										<div class="row">
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-													<header>
-														<h3>Gym Website</h3>
-													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-													<footer>
-														<ul class="actions">
-															<li><a href="https://grand-sunshine-4f99a4.netlify.app" class="button alt">See</a></li>
-														</ul>
-													</footer>
-												</section>
-											</div>
-											<div class="col-4 col-6-medium col-12-small">
-												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-													<header>
-														<h3>Tailwind Sample</h3>
-													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-													<footer>
-														<ul class="actions">
-															<li><a href="https://shiny-crisp-b1bb6e.netlify.app" class="button alt">See</a></li>
-														</ul>
-													</footer>
-												</section>
-											</div>
-											<div class="col-4 col-6-medium col-12-small">
-												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-													<header>
-														<h3>Expense Tracker</h3>
-													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-													<footer>
-														<ul class="actions">
-															<li><a href="https://resplendent-kleicha-4df059.netlify.app/" class="button alt">See</a></li>
-														</ul>
-													</footer>
-												</section>
-											</div>
-											<div class="col-4 col-6-medium col-12-small">
-												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+													<a href="https://coffee-street-front-end.vercel.app" class="image featured"><img src="images/coffee.png" alt="" height="237px" /></a>
 													<header>
 														<h3>Coffee Street</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<!-- <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p> -->
 													<footer>
 														<ul class="actions">
 															<li><a href="https://coffee-street-front-end.vercel.app/" class="button alt">See</a></li>
@@ -168,11 +126,11 @@
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+													<a href="https://videogames-client-ts.vercel.app" class="image featured"><img src="images/mario.png" alt="" height="237px" /></a>
 													<header>
 														<h3>Videogames</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<!-- <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p> -->
 													<footer>
 														<ul class="actions">
 															<li><a href="https://videogames-client-ts.vercel.app/" class="button alt">See</a></li>
@@ -182,18 +140,61 @@
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+													<a href="https://todo-app-beta-one.vercel.app" class="image featured"><img src="images/todolist.png" alt="" height="237px" /></a>
 													<header>
 														<h3>Todo App</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<!-- <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p> -->
 													<footer>
 														<ul class="actions">
 															<li><a href="https://todo-app-beta-one.vercel.app/" class="button alt">See</a></li>
 														</ul>
 													</footer>
 												</section>
+											</div>	
+											<div class="col-4 col-6-medium col-12-small">
+												<section class="box">
+													<a href="https://grand-sunshine-4f99a4.netlify.app" class="image featured"><img src="images/gym.png" alt="" height="237px" /></a>
+													<header>
+														<h3>Gym Website</h3>
+													</header>
+													<!-- <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p> -->
+													<footer>
+														<ul class="actions">
+															<li><a href="https://grand-sunshine-4f99a4.netlify.app" class="button alt">See</a></li>
+														</ul>
+													</footer>
+												</section>
 											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<section class="box">
+													<a href="https://shiny-crisp-b1bb6e.netlify.app" class="image featured"><img src="images/tailwind.png" alt="" height="237px" /></a>
+													<header>
+														<h3>Tailwind Sample</h3>
+													</header>
+													<!-- <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p> -->
+													<footer>
+														<ul class="actions">
+															<li><a href="https://shiny-crisp-b1bb6e.netlify.app" class="button alt">See</a></li>
+														</ul>
+													</footer>
+												</section>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<section class="box">
+													<a href="https://resplendent-kleicha-4df059.netlify.app/" class="image featured"><img src="images/dashboard.png" alt="" height="237px" /></a>
+													<header>
+														<h3>Expense Tracker</h3>
+													</header>
+													<!-- <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p> -->
+													<footer>
+														<ul class="actions">
+															<li><a href="https://resplendent-kleicha-4df059.netlify.app/" class="button alt">See</a></li>
+														</ul>
+													</footer>
+												</section>
+											</div>
+											
 										</div>
 									</section>
 
@@ -201,7 +202,7 @@
 							<div class="col-12">
 
 								<!-- Blog -->
-									<section>
+									<!-- <section>
 										<header class="major">
 											<h2>The Blog</h2>
 										</header>
@@ -223,7 +224,7 @@
 												</section>
 											</div>
 										</div>
-									</section>
+									</section> -->
 
 							</div>
 						</div>
@@ -234,7 +235,7 @@
 				<section id="footer">
 					<div class="container">
 						<div class="row">
-							<div class="col-8 col-12-medium">
+							<!-- <div class="col-8 col-12-medium">
 								<section>
 									<header>
 										<h2>Blandit nisl adipiscing</h2>
@@ -248,8 +249,8 @@
 										</li>
 									</ul>
 								</section>
-							</div>
-							<div class="col-4 col-12-medium">
+							</div> -->
+							<!-- <div class="col-4 col-12-medium">
 								<section>
 									<header>
 										<h2>What's this all about?</h2>
@@ -266,8 +267,8 @@
 										</ul>
 									</footer>
 								</section>
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
+							</div> -->
+							<!-- <div class="col-4 col-6-medium col-12-small">
 								<section>
 									<header>
 										<h2>Tempus consequat</h2>
@@ -281,8 +282,8 @@
 										<li><a href="#">Elit class aptent taciti sociosqu ad litora</a></li>
 									</ul>
 								</section>
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
+							</div> -->
+							<!-- <div class="col-4 col-6-medium col-12-small">
 								<section>
 									<header>
 										<h2>Ipsum et phasellus</h2>
@@ -296,35 +297,35 @@
 										<li><a href="#">Elit class aptent taciti sociosqu ad litora</a></li>
 									</ul>
 								</section>
-							</div>
+							</div> -->
 							<div class="col-4 col-12-medium">
 								<section>
 									<header>
-										<h2>Vitae tempor lorem</h2>
+										<h2>My social Media</h2>
 									</header>
 									<ul class="social">
-										<li><a class="icon brands fa-facebook-f" href="#"><span class="label">Facebook</span></a></li>
+										<!-- <li><a class="icon brands fa-facebook-f" href="#"><span class="label">Facebook</span></a></li>
 										<li><a class="icon brands fa-twitter" href="#"><span class="label">Twitter</span></a></li>
 										<li><a class="icon brands fa-dribbble" href="#"><span class="label">Dribbble</span></a></li>
-										<li><a class="icon brands fa-tumblr" href="#"><span class="label">Tumblr</span></a></li>
-										<li><a class="icon brands fa-linkedin-in" href="#"><span class="label">LinkedIn</span></a></li>
+										<li><a class="icon brands fa-tumblr" href="#"><span class="label">Tumblr</span></a></li> -->
+										<li><a class="icon brands fa-linkedin-in" href="https://www.linkedin.com/in/nora-rodriguez-b90947248/"><span class="label">LinkedIn</span></a></li>
 									</ul>
 									<ul class="contact">
-										<li>
+										<!-- <li>
 											<h3>Address</h3>
 											<p>
 												Untitled Incorporated<br />
 												1234 Somewhere Road Suite<br />
 												Nashville, TN 00000-0000
 											</p>
-										</li>
+										</li> -->
 										<li>
 											<h3>Mail</h3>
-											<p><a href="#">someone@untitled.tld</a></p>
+											<p style="color: #ffffff">nora.rodriguez.agr@gmail.com</p>
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<p>(800) 000-0000</p>
+											<p style="color: #ffffff">+52 8180218490</p>
 										</li>
 									</ul>
 								</section>
@@ -334,7 +335,7 @@
 								<!-- Copyright -->
 									<div id="copyright">
 										<ul class="links">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; Portfolio. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 										</ul>
 									</div>
 
